--- a/astrogrid/mySpace/build.xml
+++ b/astrogrid/mySpace/build.xml
@@ -6,7 +6,7 @@
     <property name="lib.dir" value="${basedir}/lib"/>
     
     <path id="build.class.path">
-      <fileset dir="lib.dir">
+      <fileset dir="${lib.dir}">
         <include name="*.jar"/>
         <include name="*.zip"/>
       </fileset>
