Enter the first version of the Iteration 3 file transfer functions.

--- a/astrogrid/mySpace/src/java/org/astrogrid/mySpace/mySpaceStatus/statuscodes.properties
+++ b/astrogrid/mySpace/src/java/org/astrogrid/mySpace/mySpaceStatus/statuscodes.properties
@@ -43,7 +43,7 @@ AGMMCW00152=({0}) Expiry period not set; default adopted.
 #MS_W_RGCEXPM=
 AGMMCW00153=({0}) Registry configuration file contains an illegal expiry period.
 #MS_W_RGCSRVI=
-AGMMCW001543=({0}) Registry configuration contains an invalid server entry.
+AGMMCW00154=({0}) Registry configuration contains an invalid server entry.
 
 
 
@@ -89,6 +89,11 @@ AGMMCE00217=({0}) Error look up dataholderS details.
 AGMMCE00218=({0}) Error look up dataholder details.
 #MS_E_EXPORT=Error Exporting Data Holder.
 AGMMCE00219=({0}) Error Exporting Data Holder.
+#
+AGMMCE00220=({0}) Failed to delete container.
+#
+AGMMCE00221=({0}) Failed to delete user.
+
 
 # Informational codes.
 
@@ -139,3 +144,4 @@ AGMSCE01046=({0}) Unkown Error while deleting data holder.
 AGMSCE01047=({0}) File does not exist.
 #ERR_IO_BUILD_RESPONS=There is an io exception whild building response xml.
 AGMSCE01048=({0}) I/O exception while building response XML.
+
